Generate customer 1 on page load

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -18,3 +18,10 @@ body {
 .db-tab {
   border: 1px solid darkcyan;
 }
+
+#db-display {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
