Tweak html and css to enable hide and show

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -19,9 +19,13 @@ body {
   border: 1px solid darkcyan;
 }
 
-#db-display {
+.booking-display {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   flex-wrap: wrap;
+}
+
+.hidden {
+  display: none;
 }
