Add date picker. Display available rooms based on selected date

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -1,5 +1,6 @@
 /* This is an example of how to import a partial scss file*/
 @import "_variables";
+@import "~js-datepicker/src/datepicker";
 
 body {
   background: pink;
@@ -19,7 +20,8 @@ body {
   border: 1px solid darkcyan;
 }
 
-.booking-display {
+.my-booking-display,
+.avail-rooms-box {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
