--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -1,2 +1,10 @@
 $primary-background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
 ;
+
+// fonts
+$hotel-name-font:'Cinzel', serif;
+$subheader-font:'Italiana', sans-serif;
+
+
+// color
+$form-bg:rgba(255,255,255,0.5)
