--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2,8 +2,48 @@
 @import "_variables";
 @import "~js-datepicker/src/datepicker";
 
+@mixin column-center (){
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 body {
   background: pink;
+  color:white;
+  @include column-center();
+
+  h1,h2,h3 {
+    text-align: center;
+  }
+  h1 {
+    font-size: 50px;
+    font-family: $hotel-name-font;
+    font-weight: 100;
+  }
+
+  h2 {
+    font-family: $subheader-font;
+  }
+
+  #login-form {
+    background-color:$form-bg;
+    margin-top: 7%;
+    @include column-center();
+  }
+
+}
+
+#bg-video {
+  position: fixed;
+  left: 0;
+  top:0;
+  max-width: 100%;
+  // max-height: 100%;
+  // min-height: 50%;
+  // width: auto;
+  // height: auto;
+  z-index: -100;
 }
 
 .dashboard-view {
