--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -4,7 +4,12 @@ $primary-background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,1
 // fonts
 $hotel-name-font:'Cinzel', serif;
 $subheader-font:'Italiana', sans-serif;
+$login-form-font:'Raleway', sans-serif;
 
 
 // color
-$form-bg:rgba(255,255,255,0.5)
+$form-bg:rgba(255,255,255,0.5);
+$placeholder:#999999;
+$login-input-bg:rgba(229,235,235,0.6);
+$login-btn-bg:rgba(0,0,0,0.4);
+$login-input-text:rgba(0,0,0,0.6);
