--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -13,3 +13,4 @@ $placeholder:#999999;
 $login-input-bg:rgba(229,235,235,0.5);
 $login-btn-bg:rgba(0,0,0,0.4);
 $login-input-text:rgba(0,0,0,0.8);
+$db-main-text:#FAF9F6;
