--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -17,15 +17,15 @@
 
 body {
   background: pink;
+  // padding: 0
 }
 
 .home-view{
   @include flex-column-center();
   color:white;
+
   h1 {
-    font-size: 50px;
-    font-family: $hotel-name-font;
-    font-weight: 100;
+    font: 100 50px $hotel-name-font;
   }
   
   h2 {
@@ -35,47 +35,45 @@ body {
 
 #login-form {
   box-sizing: border-box;
-    background-color:$form-bg;
-    width: 200px;
-    height: 260px;
-    @include flex-column-center();
-    justify-content: flex-end;
-    padding-bottom: 20px;
-    border-radius: 5px;
+  background-color:$form-bg;
+  width: 200px;
+  height: 260px;
+  @include flex-column-center();
+  justify-content: flex-end;
+  padding-bottom: 20px;
+  border-radius: 5px;
 
-    ::placeholder {
+  ::placeholder {
       color:$placeholder;
     }
-    font-family: $login-form-font;
-    font-weight: 200;
+  font: 200 $login-form-font;
 }
 
-  #username-input,#password-input, #login-btn{
-    box-sizing: border-box;
-    width: 150px;
-    height: 25px;
-    margin: 10px 0;
-    padding: 5px;
-    border: none;
-    border-radius: 2px;
-    outline:none;
-    background-color:$login-input-bg;
-    color:$login-input-text;
-    font-family: $login-form-font;
-    font-weight: 400;
-  }
+#username-input,#password-input, #login-btn{
+  box-sizing: border-box;
+  width: 150px;
+  height: 25px;
+  margin: 10px 0;
+  padding: 5px;
+  border: none;
+  border-radius: 2px;
+  outline:none;
+  background-color:$login-input-bg;
+  color:$login-input-text;
+  font: 400 $login-form-font;
+}
   
   
-  #login-btn {
-    background-color: $login-btn-bg;
-    cursor: pointer;
-    color:$form-bg;
-  }
+#login-btn {
+  background-color: $login-btn-bg;
+  cursor: pointer;
+  color:$form-bg;
+}
 
-  #errorMsg-login{
-    color:firebrick;
-    text-align: center;
-  }
+#errorMsg-login{
+  color:firebrick;
+  text-align: center;
+}
 
 
 #bg-video {
@@ -87,51 +85,56 @@ body {
   z-index: -100;
 }
 
-
-
 .dashboard-view {
+  position: fixed;
+  top:0;
+  left:0;
   box-sizing: border-box;
+  color:$db-main-text;
   width: 100%;
   height: 100%;
-  padding: 10px 20px;
-  background-color: white;
-  // margin: 0;
-  // border: 1px solid salmon;
+  display: flex;
+  flex-direction: column;
   font-family:$login-form-font;
-  // background-image: url('./images/lotusbg.png');
+  background: url('../images/monkeybg.png') no-repeat;
+  background-size: cover;
 }
 
 #db-header-container {
-  @include flex-row-apart()
+  padding: 10px 20px;
+  @include flex-row-apart();
+  background-color:$login-btn-bg;
 }
 
 #db-tab-container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  border-bottom: 2px solid #999999;
-}
-
-.db-tab {
-  text-align: center;
+  background-color:rgba(153,153,153,0.7);
+  .db-tab {
+    text-align: center;
+  }
 }
 
 .my-booking-display,
 .avail-rooms-box {
-  // display: flex;
-  // flex-direction: row;
-  // justify-content: space-between;
-  // flex-wrap: wrap;
   display: grid;
   grid-template-columns: repeat(auto-fit,200px);
   gap: 10px;
+  margin-top:10px;
+  height: 80%;
   justify-content: center;
-  margin:10px 0;
+  overflow: auto;
+}
+
+.total-cost{
+  padding-left: 20px;
+  margin-top:0;
+  background-color:rgba(153,153,153,0.7)
 }
 
 .booking-card, .room-card {
   background-color: lightblue;
 }
-
 
 .hidden {
   display: none;
