--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -100,6 +100,12 @@ body {
   background-size: cover;
 }
 
+.make-new-display {
+  display: flex;
+  flex-direction: column;
+  height: 80vh;
+}
+
 #db-header-container {
   padding: 10px 20px;
   @include flex-row-apart();
@@ -134,6 +140,17 @@ body {
 
 .booking-card, .room-card {
   background-color: lightblue;
+  width: 200px;
+  height: 150px;
+  font-size:16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  p {
+    margin: 0;
+    margin-top:5px;
+    text-align: center;
+  }
 }
 
 .hidden {
